<resources>
    <string name="app_name">FoodApp</string>

    <string name="location_name">Санкт-Петербург</string>
    <string name="date_current">12 Августа, 2023</string>

    <string name="bot_nav_action_1">Главная</string>
    <string name="bot_nav_action_2">Поиск</string>
    <string name="bot_nav_action_3">Корзина</string>
    <string name="bot_nav_action_4">Аккаунт</string>
    <string name="bot_nav_action_5">Избранное</string>

    <string-array name="tags">
        <item>Все меню</item>
        <item>Салаты</item>
        <item>С рисом</item>
        <item>С рыбой</item>
    </string-array>

    <string name="tv_dish_title">Заголовок</string>
    <string name="btn_pay_text">Оплатить</string>
    <string name="category">Категория</string>
    <string name="favorite_title">Favorite</string>
    <string name="profile_title">Profile</string>
    <string name="tv_grid_item">Название блюда</string>
    <string name="name_info_dish">Название</string>
    <string name="price_info_dish">Цена</string>
    <string name="weight_info_dish">Вес</string>
    <string name="description_info_dish">Description</string>
    <string name="btn_add_to_cart_text">Добавить в корзину</string>
    <string name="name_shop_cart_item">Название</string>
    <string name="price_shop_cart_item">Цена</string>
    <string name="weight_shop_cart_item">Вес</string>
    <string name="count_shop_cart_item">0</string>
    <string name="tv_favorites_title">Избранное</string>
    <string name="msg_dish_added_to_cart">Товар добавлен в корзину</string>
    <string name="msg_dish_already_exist_in_cart">Товар уже есть в корзине</string>
    <string name="msg_dish_added_to_favorites">Товар добавлен в избранное</string>
    <string name="msg_dish_already_exist_in_favorites">Товар уже есть в избранном</string>
    <string name="error_load_data">Something went wrong</string>
</resources>