<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_2"
        android:title="@string/bot_nav_action_1"/>
    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/bot_nav_action_5"/>
    <item
        android:id="@+id/shoppingCart"
        android:enabled="true"
        android:icon="@drawable/ic_cart_2"
        android:title="@string/bot_nav_action_3"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_account_2"
        android:title="@string/bot_nav_action_4"/>
</menu>