<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:background="@drawable/style_back_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:padding="6dp"
                android:id="@+id/ivFavorites"
                android:layout_width="62dp"
                android:layout_height="62dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameFavoritesItem"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/name_shop_cart_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:id="@+id/priceFavoritesItem"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold"
                    android:text="@string/price_shop_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="16sp"
                    android:id="@+id/weightFavoritesItem"
                    android:textColor="@color/gray_shade1"
                    android:text="@string/weight_shop_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>